+ finally fixed variable width of cards (body: display flex was the issue in the css file) + above error also fixed overflow x in the cards to finally allow a horizontal scrollbar + removed unnecessary styling settings + improved accessibility + improved headlines logic + added alt to imgs + added meta description + rebuilt website

--- a/src/index.css
+++ b/src/index.css
@@ -26,16 +26,11 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
   overflow-y: scroll;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  overflow-x: hidden;
 }
 
 button {
